# any_pose_skill

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  setup.py
calibration/: base_T_flange.yaml  extrinsics.yaml
skills/realsense-object-locator/: SKILL.md
skills/realsense-object-locator/agents/: openai.yaml
skills/realsense-object-locator/references/: config-schema.md  debugging.md  output-format.md
skills/realsense-object-locator/scripts/: run_once.sh
src/object_locator/: __init__.py  cli.py  color_detector.py  config.py  geometry.py  grounded_sam_detector.py  models.py  openrouter_vlm.py  realsense_camera.py  transforms.py  visualization.py
tests/: test_cli_detector.py  test_color_detector.py  test_config.py  test_geometry.py  test_grounded_sam_detector.py  test_openrouter_vlm.py  test_transforms.py  test_visualization.py
